# python-streams

./: LICENSE  README.md  deploy  setup.cfg
src/streams/: FileStream.py  Stream.py  Transducer.py  data_checker.py  generator_utilities.py  utilities.py
src/streams/operations/: operators.py
tests/: test_Stream.py  test_filter_compose.py  test_generator_utilities.py  test_operator.py  test_stream_others.py  test_stream_partial.py  test_stream_performance.py  test_stream_performance_operator.py  test_stream_readme.py  users.py
tests/filestream/: test_FileStream.py
tests/shared/: BaseUnitTest.py  CustomProfiler.py  FileUtilities.py  products.json  products.py  profiler.py  users.py
tests/shared/resources/: babynames.csv  female_babies.txt
