[metadata]
name = functional-streams
version = 1.6.0
author = Muthukumaran Navaneethskrishnan
author_email = muthuishere@gmail.com
description = Functional Programming Streams ,Similar like Java, for writing concise functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muthuishere/python-streams
project_urls =
    Bug Tracker = https://github.com/muthuishere/python-streams/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src